refactor dir structure

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,7 @@
 /.vscode
 /moose-emmy
 /opsdcs-camcontrol
-/opsdcs-crew/doc
-/opsdcs-crew/sounds
+/opsdcs-crew/Scripts/opsdcs-crew/sounds
 /opsdcs-pmca
 /opsdcs-samsites
 /opsdcs-tacview
