--- a/.editorconfig
+++ b/.editorconfig
@@ -9,7 +9,7 @@ continuation_indent.before_block = 4
 continuation_indent.in_expr = 4
 continuation_indent.in_table = 4
 max_line_length = 200
-end_of_line = auto
+end_of_line = lf
 table_separator_style = comma
 trailing_table_separator = keep
 call_arg_parentheses = keep
