--- a/.gitignore
+++ b/.gitignore
@@ -10,7 +10,9 @@
 /opsdcs-setup/stubs/fm-stubs.cpp
 /opsdcs-setup/stubs/mist-stubs.lua
 /opsdcs-setup/commands-wip
+/opsdcs-setup/howto
 /opsdcs-tacview
 /scratch
 *.png
 /goldeneye/_old/*
+/lua-python-bridge/build
