--- a/.editorconfig
+++ b/.editorconfig
@@ -46,11 +46,11 @@ space_around_assign_operator = true
 align_call_args = false
 align_function_params = false
 align_continuous_assign_statement = false
-align_continuous_rect_table_field = false
+align_continuous_rect_table_field = true
 align_continuous_line_space = 2
 align_if_branch = false
 # option none / always / contain_curly/
-align_array_table = none
+align_array_table = always
 align_continuous_similar_call_args = false
 align_continuous_inline_comment = true
 # option none / always / only_call_stmt
