--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@
 /opsdcs-crew/Scripts/opsdcs-crew/sounds
 /opsdcs-fm/build
 /opsdcs-fm/headers
+/opsdcs-fm/dumps
 /opsdcs-fm/*.txt
 /opsdcs-pmca
 /opsdcs-samsites
