--- a/.emmyrc.json
+++ b/.emmyrc.json
@@ -2,7 +2,7 @@
     "completion": {
         "autoRequire": true,
         "autoRequireFunction": "require",
-        "autoRequireNamingConvention": "camelCase",
+        "autoRequireNamingConvention": "keep",
         "callSnippet": false,
         "postfix": "@"
     },
@@ -13,7 +13,7 @@
         "disable": [
             "undefined-global",
             "missing-parameter",
-            "need-import"
+            "missing-return-value"
         ],
         "globals": [],
         "globalsRegex": [],
