--- a/.emmyrc.json
+++ b/.emmyrc.json
@@ -33,7 +33,8 @@
         "extensions": [
             ".lua",
             ".lods",
-            ".dlg"
+            ".dlg",
+            ".cfg"
         ],
         "requirePattern": []
     },
