--- a/examples/Config/autoexec.cfg
+++ b/examples/Config/autoexec.cfg
@@ -1,5 +1,5 @@
-crash_report_mode = "silent"
-input = {
-	command_code_tooltips = true,
-}
 log.set_output("dcs", "", log.ALL, log.FULL)
+crash_report_mode = "silent"
+input = { command_code_tooltips = true }
+DLSS_Preset = "K"
+HUD_MFD_after_DLSS = true
