--- a/.emmyrc.json
+++ b/.emmyrc.json
@@ -2,7 +2,7 @@
     "completion": {
         "autoRequire": true,
         "autoRequireFunction": "require",
-        "autoRequireNamingConvention": "camelCase",
+        "autoRequireNamingConvention": "camel-case",
         "callSnippet": false,
         "postfix": "@"
     },
@@ -12,8 +12,7 @@
     "diagnostics": {
         "disable": [
             "undefined-global",
-            "missing-parameter",
-            "need-import"
+            "missing-parameter"
         ],
         "globals": [],
         "globalsRegex": [],
